@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: output.c,v 1.167.2.2 2006/01/01 12:50:17 sniper Exp $ */
+/* $Id: output.c,v 1.167.2.3 2006/03/27 08:26:10 tony2001 Exp $ */
 
 #include "php.h"
 #include "ext/standard/head.h"
@@ -606,11 +606,7 @@ static inline void php_ob_append(const char *text, uint text_length TSRMLS_DC)
  	/* If implicit_flush is On or chunked buffering, send contents to next buffer and return. */
 	if (OG(active_ob_buffer).chunk_size
 		&& OG(active_ob_buffer).text_length >= OG(active_ob_buffer).chunk_size) {
-		zval *output_handler = OG(active_ob_buffer).output_handler;
 		
-		if (output_handler) {
-			output_handler->refcount++;
-		}
 		php_end_ob_buffer(1, 1 TSRMLS_CC);
 		return;
 	}
